frontend/test/should_fail/index_003_incidence_count_index_argument_mismatch.grg
#using "index_model_003.gm"

test indexaccess {
	n:N -e:E->;
	
	if{ countFromIndex(foo, e)==42; }
}
